Added 4 API per stock ~ 2,000 API calls per total and got financial data results.  Modified some minor background formatting in main trading console

--- a/assets/css/trading_main_style.css
+++ b/assets/css/trading_main_style.css
@@ -1,7 +1,16 @@
-.body { 
+/* main body attributes */
+
+body { 
+    background-image: url("../images/little_pluses.png");
     background-color: bisque;
 }
 
+.main-wrapper{
+    background-color: white;
+}
+
+
+/* styling for the MD table */
 .scrollable-table {
     max-height:100px;
 }
