--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -3,9 +3,5 @@
     font-family: 'Racing Sans One';
     font-size: 15px;
     text-align: center;
-}
-
-
-#trade-cost {
-    font-size: 20px;
+    text-transform: capitalize;
 }
